src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>GlobalAllianceContactEmailAddress__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance Contact</description>
        <label>Channel Partner Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GlobalAllianceContactFirstName__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance Contact</description>
        <label>Channel Partner Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalAllianceContactLastName__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance Contact</description>
        <label>Channel Partner Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalAllianceContactPhoneNumber__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance Contact</description>
        <label>Channel Partner Contact Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitCountryofIncorporation__c</fullName>
        <description>SFDC1-5203 This field populates from &quot;Incorporated in Country&quot; field on associated Legal Entity object</description>
        <formula>IHSMarkitLegalEntity__r.IncorporatedinCountry__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IHS Markit Country of Incorporation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitLegalEntityCity__c</fullName>
        <description>SFDC1-905 IHS Markit Legal Entity: City</description>
        <formula>IHSMarkitLegalEntity__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IHS Markit Legal Entity: City</inlineHelpText>
        <label>IHS Markit Legal Entity: City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitLegalEntityCountry__c</fullName>
        <description>SFDC1-905 IHS Markit Legal Entity: Country</description>
        <formula>IHSMarkitLegalEntity__r.Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IHS Markit Legal Entity: Country</inlineHelpText>
        <label>IHS Markit Legal Entity: Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitLegalEntityStateProvinceNew__c</fullName>
        <description>SFDC1-8096 State of IHS Markit Legal Entity</description>
        <inlineHelpText>State of IHS Markit Legal Entity</inlineHelpText>
        <label>IHS Markit Legal Entity: State/Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitLegalEntityStreet__c</fullName>
        <description>SFDC1-2405: IHS Markit Legal Entity: Street</description>
        <inlineHelpText>IHS Markit Legal Entity: Street</inlineHelpText>
        <label>IHS Markit Legal Entity: Street</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IHSMarkitLegalEntityZipPostal_Code__c</fullName>
        <description>SFDC1-905 IHS Markit Legal Entity: Zip/Postal Code
SFDC1-7807: Updated label to Postal/Zip Code</description>
        <formula>IHSMarkitLegalEntity__r.PostalCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IHS Markit Legal Entity: Postal/Zip Code</inlineHelpText>
        <label>IHS Markit Legal Entity:Postal/Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitLegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-2405 IHS Markit Legal Entity</description>
        <inlineHelpText>IHS Markit Legal Entity</inlineHelpText>
        <label>IHS Markit Legal Entity</label>
        <referenceTo>LegalEntity__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>IHSMarkitLegalEntity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IHSMarkitNoticeAddressCity__c</fullName>
        <description>SFDC1-2405: IHS Markit Notice Address: City</description>
        <inlineHelpText>IHS Markit Notice Address: City</inlineHelpText>
        <label>IHS Markit Notice Address: City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitNoticeAddressCountry__c</fullName>
        <description>SFDC1-2405: IHS Markit Notice Address: Country</description>
        <inlineHelpText>IHS Markit Notice Address: Country</inlineHelpText>
        <label>IHS Markit Notice Address: Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitNoticeAddressStreet__c</fullName>
        <description>SFDC1-2405: IHS Markit Notice Address: Street</description>
        <inlineHelpText>IHS Markit Notice Address: Street</inlineHelpText>
        <label>IHS Markit Notice Address: Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitNoticeState__c</fullName>
        <description>SFDC1-2405: IHS Markit Notice Address: State/Province</description>
        <inlineHelpText>IHS Markit Notice Address: State/Province</inlineHelpText>
        <label>IHS Markit Notice Address:State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitNoticeZipCode__c</fullName>
        <description>SFDC1-2405: IHS Markit Notice Address: Zip/Postal Code
SFDC1-7807: Updated label to Postal/Zip Code</description>
        <inlineHelpText>IHS Markit Notice Address: Postal/Zip Code</inlineHelpText>
        <label>IHS Markit Notice Address:Postal/ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitStateOfIncorporationText__c</fullName>
        <description>SFDC1-8096 New field to display label of state instead of abbreviation</description>
        <inlineHelpText>IHS Markit State of Incorporation</inlineHelpText>
        <label>IHS Markit State of Incorporation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitStateofIncorporation__c</fullName>
        <description>SFDC1-5203 This field populates from &quot;Incorporated in State&quot; field on associated Legal Entity object</description>
        <formula>TEXT(IHSMarkitLegalEntity__r.IncorporatedinState__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IHS Markit State of Incorporation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Increase__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of % Increase</description>
        <inlineHelpText>Enter % Increase</inlineHelpText>
        <label>% Increase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InternalInstructions__c</fullName>
        <description>SFDC1-718;Internal comment/instruction on a Contract</description>
        <label>Internal Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceFormat__c</fullName>
        <description>SFDC1-718;Only on Contract Type = Order Form</description>
        <label>Invoice Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bundled with details</fullName>
                </value>
                <value>
                    <fullName>Unbundled</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Bundled without details.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>Source System Name and Record ID</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-6328 : Legacy Contract identifier for migrated cases. First 3 letters identifies the source system</description>
        <externalId>true</externalId>
        <inlineHelpText>Populates from the legacy system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyMarkitSAPID__c</fullName>
        <description>SFDC1-8279 This field stores the SAP ID for Legacy Markit contracts</description>
        <inlineHelpText>SAP ID for Legacy Markit contracts</inlineHelpText>
        <label>Legacy Markit SAP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of CRM system that this record has come from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegalEntityName__c</fullName>
        <description>SFDC1-718;This is a custom entity used in Products as well</description>
        <inlineHelpText>Please populate Legal Entity</inlineHelpText>
        <label>Legal Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveCMClients__c</fullName>
        <description>SFDC1-2455 CM Relationships</description>
        <label>Live CM Clients</label>
        <summaryFilterItems>
            <field>CMRelationship__c.AccountStatus__c</field>
            <operation>equals</operation>
            <value>Live</value>
        </summaryFilterItems>
        <summaryForeignKey>CMRelationship__c.BrokerContract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MarkitGeneralAgreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-2209 This field help user select Contract when General Agreement Type is  Markit General Agreement</description>
        <label>Markit General Agreement</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contracts (Markit General Agreement)</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ModelClauseAttached__c</fullName>
        <description>SFDC1-7506: Select the option to attach Model Clause</description>
        <inlineHelpText>Model Clause Attached?</inlineHelpText>
        <label>Model Clause Attached?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultiyearOrderForm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6053 : Multiyear Order Form on Order From contracts</description>
        <inlineHelpText>Multiyear refers to contracts for 2 years and over</inlineHelpText>
        <label>Multiyear Order Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NameProvidedUsageDetails__c</fullName>
        <description>SFDC1-9301: Provide the Usage Detail</description>
        <inlineHelpText>If Usage Reports Required = Yes , please provide the Usage Detail</inlineHelpText>
        <label>Name (provided usage details)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetIncrease__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Net Increase</description>
        <inlineHelpText>Enter Net Increase</inlineHelpText>
        <label>Net Increase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewAnnualRevenue__c</fullName>
        <description>SFDC1-9300:Price Increase Details section field creation</description>
        <inlineHelpText>New Annual Revenue</inlineHelpText>
        <label>New Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewGovernmentContractName__c</fullName>
        <description>SFDC1-6073: Making this a formula field to fetch value from Opportunity field of the same name</description>
        <formula>Opportunity__r.GovernmentContractName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Government Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewGovernmentContractNumber__c</fullName>
        <description>SFDC1-6073: Getting the value from Opportunity field of the same name</description>
        <formula>Opportunity__r.GovernmentContractNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Government Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoInternalApprovalNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6282</description>
        <label>No Internal Approval Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoticeAddress__c</fullName>
        <description>SFDC1-2405 Autopopulates based on address for account associated with Client Legal Entity field, can be edited</description>
        <inlineHelpText>Notice Address</inlineHelpText>
        <label>Notice Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumApprovalRequested__c</fullName>
        <description>SFDC1-6282: Count InternalApproval__c</description>
        <label># Approvers</label>
        <summaryForeignKey>InternalApproval__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumApprovalsApproved__c</fullName>
        <description>SFDC1-6282: Count InternalApproval__c where status = Approved</description>
        <label># Approvals</label>
        <summaryFilterItems>
            <field>InternalApproval__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>InternalApproval__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumCorporateComplianceApprovalsApproved__c</fullName>
        <description>SFDC1-7774: Count of Internal Approval where status is &quot;Approved&quot; and Type is &quot;Compliance Approvals&quot;</description>
        <inlineHelpText>Total number of Internal Approval where status is &quot;Approved&quot; and Type is &quot;Compliance Approvals&quot;</inlineHelpText>
        <label>#  Corporate Compliance Approvals</label>
        <summaryFilterItems>
            <field>InternalApproval__c.ApprovalType__c</field>
            <operation>equals</operation>
            <value>Corporate Compliance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>InternalApproval__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>InternalApproval__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OpportunityNumber__c</fullName>
        <description>SFDC1-718;Needed on the External Doc and Internal for compliance.Only on Contract Type = Order Form</description>
        <formula>Opportunity__r.Opportunitynum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityRecordType__c</fullName>
        <description>SFDC1-5852 : This field will have the Opportunity RecordType Name on Contract Record.</description>
        <formula>Opportunity__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpptyOwnerEmail__c</fullName>
        <description>SFDC1-802 This field is used to store the Related Opportunity Owner&apos;s email Address on Contract</description>
        <label>Oppty Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OrderFormFormat__c</fullName>
        <description>SFDC1-718;Only on Contract Type = Order Form</description>
        <label>Order Form Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bundled with details</fullName>
                </value>
                <value>
                    <fullName>Unbundled</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderReason__c</fullName>
        <description>SFDC1-718;For Use only on Order Form Contract Types.  Required for SAP Entry.</description>
        <label>Order Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Add-On</fullName>
                </value>
                <value>
                    <fullName>Mid-Term Changes</fullName>
                </value>
                <value>
                    <fullName>Rebates</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
                <value>
                    <fullName>Manual Renewal</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Migrated Renewal</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Syncronizing Subs</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OriginalContractEndDate__c</fullName>
        <description>SFDC1-2405 Original Contract End Date</description>
        <formula>OriginalContract__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Original Contract End Date</inlineHelpText>
        <label>Original Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OriginalContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-2405 Original Contract</description>
        <inlineHelpText>Original Contract</inlineHelpText>
        <label>Original Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.RecordTypeId</field>
                <operation>equals</operation>
                <value>Order Form</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contracts (Original Contract)</relationshipLabel>
        <relationshipName>OriginalContract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PGIOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-8056 This field holds the user name who updated SAP PGI’d field</description>
        <inlineHelpText>This field holds the user name who updated SAP PGI’d field</inlineHelpText>
        <label>PGI Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PKIDContract__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>Ctr{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID Contract</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>POAttached__c</fullName>
        <description>SFDC1-8559 : PO Attached field for OM on the Contract</description>
        <inlineHelpText>Gives information on whether a user has attached the PO to  Contract.</inlineHelpText>
        <label>PO Attached</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PODate__c</fullName>
        <description>SFDC1-718;Only on Contract Type = Order Form</description>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PORequiredDS__c</fullName>
        <description>SFDC1-7634 If the PO Required Field (PORequired__c ) on the Contract = True - then Display &quot;Yes&quot; in the field otherwise &quot;No&quot;</description>
        <formula>IF( PORequired__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PO Required for Drawloop</inlineHelpText>
        <label>PORequiredDS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PORequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-718;Only on Contract Type = Order Form</description>
        <label>PO Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <description>SFDC1-718;Only on Contract Type = Order Form</description>
        <label>PO#</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTerms__c</fullName>
        <description>SFDC1-718, only for Contract type = Order Form</description>
        <inlineHelpText>Standard terms are Net 30. Finance Approval Required for non-standard payment terms</inlineHelpText>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>30 EOM</fullName>
                </value>
                <value>
                    <fullName>60 EOM</fullName>
                </value>
                <value>
                    <fullName>Credit Line Debit (CAHD)</fullName>
                </value>
                <value>
                    <fullName>Due Now</fullName>
                </value>
                <value>
                    <fullName>Net 14</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreviousYearTotalSalesPrice__c</fullName>
        <description>SFDC1-1048 New field Previous Year Total Sales Price added to Contracts</description>
        <label>Previous Year Total Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceIncreaseApplied__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Price Increase Applied
SFDC1-9300 : Price Increase Details section field creation/updates</description>
        <inlineHelpText>Whether Price Increase Applied</inlineHelpText>
        <label>Price Increase Applied</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceIncreaseClause__c</fullName>
        <description>SFDC1-5201 Price Increase Clause for order form contract</description>
        <inlineHelpText>Select Standard Contract price increase, if you are not adding a specific annual increase rate percent or CPI to the contract</inlineHelpText>
        <label>Price Increase Clause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Contract Price Increase</fullName>
                </value>
                <value>
                    <fullName>Notification - Contracted Percent Increase</fullName>
                </value>
                <value>
                    <fullName>Notification - CPI Increase</fullName>
                </value>
                <value>
                    <fullName>Notification (Initial Term) - CPI Increase</fullName>
                </value>
                <value>
                    <fullName>No Notification - Contracted Percent Increase</fullName>
                </value>
                <value>
                    <fullName>No Notification - CPI Increase</fullName>
                </value>
                <value>
                    <fullName>No Notification (Initial Term) - CPI Increase</fullName>
                </value>
                <value>
                    <fullName>No Increase Allowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceIncreaseEffectiveDate__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Price Increase Effective Date</description>
        <inlineHelpText>Enter Price Increase Effective Date</inlineHelpText>
        <label>Price Increase Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriceIncreaseLetterReturnedResent__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Date Price Increase Letter Returned And Resent</description>
        <inlineHelpText>Enter Date Price Increase Letter Returned And Resent</inlineHelpText>
        <label>Price Increase Letter Returned &amp; Resent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriceIncreaseLockedInDate__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Price Increase Locked In Date</description>
        <inlineHelpText>Enter Price Increase Locked In Date</inlineHelpText>
        <label>Price Increase Locked In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriceIncreaseNotAutomatic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-9300:Price Increase Details section field creation</description>
        <inlineHelpText>Price Increase Not Automatic</inlineHelpText>
        <label>Price Increase (not automatic)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProFormaApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6735 : Field related  to  Consulting Record Type</description>
        <inlineHelpText>Required if &gt;$100K or any revenue splits across business lines</inlineHelpText>
        <label>Pro Forma Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProFormaPosted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6735 : Field related  to  Consulting Record Type</description>
        <inlineHelpText>Required if &gt;$25K</inlineHelpText>
        <label>Pro Forma Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProcessedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7471 This field holds the Processed Contract Number</description>
        <inlineHelpText>Please select the Processed Contract Number</inlineHelpText>
        <label>Processed Contract #</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contracts (Processed Contract #)</relationshipLabel>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProcessedContracttext__c</fullName>
        <description>SFDC1-7471 This field holds the Processed Contract Number</description>
        <inlineHelpText>Please enter the Processed Contract number</inlineHelpText>
        <label>SAP Processed Contract #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <description>SFDC1-9301 : Fetching value from  Product Family on Opportunity</description>
        <inlineHelpText>Value coming from Product Family on Opportunity</inlineHelpText>
        <label>Product Family</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <description>SFDC1-5228 Account Overview Report, To store rollup comma separated unique Product Group values of related product line items from opportunity at Contract record level.</description>
        <inlineHelpText>To display concatenated Product Groups in a single text field.</inlineHelpText>
        <label>Product Group</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-718;Look up field for Product on Contract Line</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectManager__c</fullName>
        <description>SFDC1-6735 : Field related  to  Consulting Record Type</description>
        <inlineHelpText>This Information is Required for SOW/Consulting Contract</inlineHelpText>
        <label>Project Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <description>SFDC1-6735 : Field related  to  Consulting Record Type</description>
        <inlineHelpText>This Information is Required for SOW/Consulting Contract</inlineHelpText>
        <label>Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectTeamMembers__c</fullName>
        <description>SFDC1-6735 : Field related  to  Consulting Record Type</description>
        <inlineHelpText>This Information is Required for SOW/Consulting Contract</inlineHelpText>
        <label>Project Team Members</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>SFDC1-6735 : Field related  to  Consulting Record Type</description>
        <inlineHelpText>This Information is Required for SOW/Consulting Contract</inlineHelpText>
        <label>Project #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>